syntax = "proto2";

package simple_package.v1;

message SimpleMessage {
  required string id = 1;
}

service SimpleService {
  rpc SimpleUnaryRequest(SimpleMessage) returns (SimpleMessage);

  rpc SimpleClientStreamRequest(stream SimpleMessage) returns (SimpleMessage);

  rpc SimpleServerStreamRequest(SimpleMessage)
    returns (stream SimpleMessage);

  rpc SimpleBidirectionalStreamRequest(stream SimpleMessage)
    returns (stream SimpleMessage);
}
